// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoResults correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <NoResults
    value="value"
  >
    <div
      aria-selected="false"
      className="no-results orion-fusion-theme"
      role="option"
    >
      <FormattedMessage
        id="Terra.form.select.noResults"
        values={
          Object {
            "text": "value",
          }
        }
      >
        <span>
          Terra.form.select.noResults
        </span>
      </FormattedMessage>
    </div>
  </NoResults>
</ThemeContextProvider>
`;

exports[`NoResults should render NoResults with custom content 1`] = `
<div
  aria-selected="false"
  className="no-results"
  role="option"
>
  <div>
    Custom
  </div>
</div>
`;

exports[`NoResults should render a default NoResults 1`] = `
<div
  aria-selected="false"
  className="no-results"
  role="option"
>
  <FormattedMessage
    id="Terra.form.select.noResults"
    values={
      Object {
        "text": "value",
      }
    }
  />
</div>
`;
